# reminder

./: README.md  pyproject.toml
reminder/: __main__.py  event.py  reminder.py  storage.py  util.py
